--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["ThiagoDiasV <thiago76ers@gmail.com>"]
 python = "^3.8"
 django = "^3.0.3"
 django-nested-admin = "^3.2.4"
+psycopg2 = "^2.8.4"
+psycopg2-binary = "^2.8.4"
 
 [tool.poetry.dev-dependencies]
 pylama = "^7.7.1"
